# src/main/java/com/example/voorbeeldapp/model/VoetballerEntity.java
@@ -1,4 +1,22 @@
 package com.example.voorbeeldapp.model;
 
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@Table(name = "voetballers")
+@Getter
+@Setter
+@NoArgsConstructor
 public class VoetballerEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String naam;
+
+    private String positie;
 }
